--- a/app/views/movies/find.html.haml
+++ b/app/views/movies/find.html.haml
@@ -4,6 +4,8 @@
 		%h1.finder-title.with-font Vous avez besoin...
 
 		/ %a.quit{ href: root_path, title: 'Annuler ma recherche' }
+
+		.little-ball-a
 		
 		.mood-line
 			.line
@@ -29,6 +31,9 @@
 		.finder-subtitle Pour finir, lions les genres...
 		%h1.finder-title.with-font Ce fait historique vous intéresse ?
 
+		.little-ball-b
+		.little-ball-c
+		
 		.related-facts
 			.fact
 				.image
@@ -71,6 +76,9 @@
 	.finder.finder-movies
 		.finder-subtitle Lions nos films avec ceux que vous avez déjà vu
 		%h1.finder-title.with-font Avez-vous aimé...
+
+		.little-ball-b
+		.little-ball-c
 
 		.related-movies
 			.movie
