--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -527,3 +527,31 @@ div.movie-more {
 	border-radius: 10px;
 	position: absolute; top: 398.5px; right: 37%; z-index: 30;
 }
+
+
+.app-overlay {
+
+	width: 100%; height: 100%; position: absolute; top: 55px; left: 0;
+	z-index: 50;
+	background: asset-url('app-overlay-bg.png') no-repeat center;
+	background-size: cover;
+
+	.close {
+		background: asset-url('close.png') no-repeat center;
+		width: 100px; height: 100px;
+		position: absolute; right: 0px; top: 0px;
+	}
+
+	.info {
+		width: 350px;
+		margin: 100px auto;
+		text-align: center;
+		padding-top: 40px;
+		background: asset-url('sync.png') no-repeat center top;
+
+		.title { text-transform: uppercase; font-size: 26px; letter-spacing: 3px; -webkit-font-smoothing: antialiased; }
+		.text { font-family: 'Aller', sans-serif; font-size: 14px; color: #888888; margin-top: 10px; }
+		.appstore-link { margin-top: 100px; }
+		.text-facebook { margin-top: 80px; }
+	}
+}
