--- a/app/assets/stylesheets/notices.css.scss
+++ b/app/assets/stylesheets/notices.css.scss
@@ -1,3 +1,48 @@
 // Place all the styles related to the notices controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.notice {
+	width: 100%; height: 100%;
+	background: asset-url('notice-bg.png') no-repeat center top;
+	background-size: cover;
+
+	.centered {
+		width: 400px;
+		margin: 200px auto;
+		text-align: center;
+	}
+
+	.icon {
+		background: asset-url('icon-impact.png') no-repeat center top;
+		width: 35px; height: 35px;
+		margin: auto;
+	}
+
+	.subtitle {
+		text-transform: uppercase;
+		font-size: 18px;
+		margin-top: 10px;
+		font-family: 'Aller-Bd', sans-serif; -webkit-font-smoothing: antialiased;
+	}
+
+	.title {
+		color: #ffca9d;
+		font-size: 55px;
+		margin-top: 20px;
+	}
+
+	.content {
+		font-size: 15px;
+		margin-top: 20px;
+	}
+
+	.button-link {
+		width: 120px;
+		font-size: 14px;
+		height: 12px; padding-top: 6px;
+		margin: 50px auto;
+		display: block;
+	}
+}
