--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -258,7 +258,7 @@ div.movie-more {
 
 	.mood-line {
 		width: 100%;
-		position: absolute; top: 300px; padding-top: 100px;
+		position: absolute; top: 37%; padding-top: 100px;
 
 		.line {
 			background: #636b75;
@@ -328,7 +328,7 @@ div.movie-more {
 		
 
 		.line-ball {
-			width: 12px; height: 12px; background: asset-url('finder-line-ball.png') no-repeat center center; position: absolute; top: calc(400px - 6px); 
+			width: 12px; height: 12px; background: asset-url('finder-line-ball.png') no-repeat center center; position: absolute; top: calc(37% + 94px); 
 		}
 
 		#movie-1 { display: block; }
@@ -349,14 +349,14 @@ div.movie-more {
 		}
 
 		
-		.line-yes { position: absolute; right: 0px; top: 400px; height: 1px; width: 37%; background: #636b75; }
-		.line-no { position: absolute; left: 0px; top: 400px; height: 1px; width: 37%; background: #636b75; }
+		.line-yes { position: absolute; right: 0px; top: calc(37% + 100px); height: 1px; width: 37%; background: #636b75; }
+		.line-no { position: absolute; left: 0px; top: calc(37% + 100px); height: 1px; width: 37%; background: #636b75; }
 
 
 	}
 
 	.next a {
-		position: absolute; top: 370px; right: 30px;
+		position: absolute; top: calc(37% + 75px); right: 30px;
 		width: 62px; height: 85px;
 		display: block;
 		background: asset-url('finder-next.png') no-repeat center center;
@@ -511,21 +511,21 @@ div.movie-more {
 	width: 4px; height: 4px;
 	background: #f6f6f6;
 	border-radius: 10px;
-	position: absolute; top: 398.5px; left: 100px; z-index: 30;
+	position: absolute; top: calc(37% + 100px); left: 100px; z-index: 30;
 }
 
 .little-ball-b {
 	width: 4px; height: 4px;
 	background: #f6f6f6;
 	border-radius: 10px;
-	position: absolute; top: 398.5px; left: 37%; z-index: 30;
+	position: absolute; top: calc(37% + 100px); left: 37%; z-index: 30;
 }
 
 .little-ball-c {
 	width: 4px; height: 4px;
 	background: #f6f6f6;
 	border-radius: 10px;
-	position: absolute; top: 398.5px; right: 37%; z-index: 30;
+	position: absolute; top: calc(37% + 100px); right: 37%; z-index: 30;
 }
 
 
