--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -19,15 +19,15 @@ $scope_blue: #04e5e8;
 
 
 	.line-left {
-		position: absolute; top: 400px; height: 1px; background-color: #a5a8ac; width: 35%;
+		position: absolute; top: calc(34% + 85px); height: 1px; background-color: #a5a8ac; width: 35%;
 	}
 	.line-right {
-		position: absolute; top: 400px; right: 300px; height: 1px; background-color: #a5a8ac; width: 22%;
+		position: absolute; top: calc(34% + 85px); right: 300px; height: 1px; background-color: #a5a8ac; width: 22%;
 	}
 
 	.find-another {
 		color: $scope_blue; font-size: 11px; text-transform: uppercase;
-		position: absolute; right: 150px; top: 395px; font-weight: bold;
+		position: absolute; right: 150px; top: calc(34% + 80px); font-weight: bold;
 		line-height: 14px; letter-spacing: 1px;
 		text-align: left;
 	}
@@ -52,6 +52,8 @@ $scope_blue: #04e5e8;
 		font-size: 56px;
 		margin: 40px 0 0 0;
 		color: #f0004e;
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
 	}
 
 	.movie-year { font-size: 15px; }
@@ -213,17 +215,23 @@ div.movie-more {
 .movie-found {
 	position: absolute;
 	left: 300%; top: 0;
+	padding-top: 12%;
+
 
 	.movie-author, .movie-year { border: none; padding: 0; font-size: 16px; }
-	.movie-author { font-size: 26px; }
+	.movie-author { font-size: 26px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 	.movie-year { margin-top: 10px; }
-	h1.movie-title { margin: 0; font-size: 70px; }
+	h1.movie-title { margin: 0; font-size: 65px; }
+
+	.movie-actions {
+		position: absolute; width: 100%; top: calc(34% + 65px); margin: 0 auto;
+	 }
 }
 
 .finder {
 
 	text-align: center;
-	padding-top: 140px;
+	padding-top: 12%;
 	height: 100%;
 	width: 100%;
 	
@@ -232,16 +240,18 @@ div.movie-more {
 	h1 {
 		text-transform: uppercase;
 		margin-top: 5px;
-		font-size: 20px;
+		font-size: 21px;
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
 	}
 
-	.finder-subtitle { text-transform: uppercase; font-size: 14px; color: #888; }
+	.finder-subtitle { text-transform: uppercase; font-size: 15px; color: #888; }
 
 	.mood-buttons {
 
 		text-align: center;
 		width: 900px;
-		margin: 60px auto 0 auto;
+		margin: 40px auto 0 auto;
 
 		.button-link {
 			cursor: pointer;
@@ -258,7 +268,7 @@ div.movie-more {
 
 	.mood-line {
 		width: 100%;
-		position: absolute; top: 37%; padding-top: 100px;
+		position: absolute; top: 34%; padding-top: 100px;
 
 		.line {
 			background: #636b75;
@@ -299,14 +309,17 @@ div.movie-more {
 	.related-movies, .related-facts {
 
 		.movie, .fact {
-			margin: 60px auto;
+			position: absolute; top: calc(34% - 40px);
 			padding: 0;
 			background: none;
 			height: 280px;
 		}
 
+		.fact { text-align: center;
+				width: 100%; }
+
 		.circle-wrapper {
-			position: absolute; z-index: 0; top: 242px; left: 0;
+			position: absolute; z-index: 0; top: calc(34% - 63px); left: 0;
 			width: 100%;
 			.circle {
 				width: 316px; height: 316px;
@@ -318,28 +331,28 @@ div.movie-more {
 
 		
 		.content {
-			position: relative; bottom: 200px;
+			position: relative; bottom: 210px;
 			width: 250px;
 			margin: auto;
 
-			.fact-title { color: #f0004e; font-size: 14px; text-transform: uppercase; padding-top: 15px; }
-			.fact-text { color: black; padding: 5px 15px; font-size: 12px; }
+			.fact-title { width: 240px; color: #f0004e; font-size: 15px; text-transform: uppercase; padding-top: 15px; }
+			.fact-text { color: black; padding: 5px 15px; font-size: 14px; }
 		}
 		
 
 		.line-ball {
-			width: 12px; height: 12px; background: asset-url('finder-line-ball.png') no-repeat center center; position: absolute; top: calc(37% + 94px); 
+			width: 12px; height: 12px; background: asset-url('finder-line-ball.png') no-repeat center center; position: absolute; top: calc(34% + 94px); 
 		}
 
 		#movie-1 { display: block; }
 
 		.controls {
-			width: 380px; margin: 0 auto 0 auto;
+			width: 100%; position: absolute; top: 62%;
 			text-align: center;
 			
 
 			div {
-				margin-right: 55px; display: inline-block; cursor: pointer; width: 53px; height: 70px; padding-top: 70px; text-align: center; font-size: 12px;
+				margin-right: 55px; display: inline-block; cursor: pointer; width: 53px; height: 70px; padding-top: 70px; text-align: center; font-size: 14px;
 			}
 
 			.yes {  margin-right: 0px; background: asset-url('controls-sprite.png') no-repeat -52px top; }
@@ -349,14 +362,14 @@ div.movie-more {
 		}
 
 		
-		.line-yes { position: absolute; right: 0px; top: calc(37% + 100px); height: 1px; width: 37%; background: #636b75; }
-		.line-no { position: absolute; left: 0px; top: calc(37% + 100px); height: 1px; width: 37%; background: #636b75; }
+		.line-yes { position: absolute; right: 0px; top: calc(34% + 100px); height: 1px; width: 34%; background: #636b75; }
+		.line-no { position: absolute; left: 0px; top: calc(34% + 100px); height: 1px; width: 34%; background: #636b75; }
 
 
 	}
 
 	.next a {
-		position: absolute; top: calc(37% + 75px); right: 30px;
+		position: absolute; top: calc(34% + 75px); right: 35px;
 		width: 62px; height: 85px;
 		display: block;
 		background: asset-url('finder-next.png') no-repeat center center;
@@ -407,8 +420,9 @@ div.movie-more {
 
 	.progress-bar {
 		background: $scope_blue;
-		height: 8px; width: 2%;
+		height: 8px; width: 4%;
 		margin-top: 18px;
+		padding-right: 40px;
 	}
 }
 
@@ -511,21 +525,21 @@ div.movie-more {
 	width: 4px; height: 4px;
 	background: #f6f6f6;
 	border-radius: 10px;
-	position: absolute; top: calc(37% + 100px); left: 100px; z-index: 30;
+	position: absolute; top: calc(34% + 100px); left: 100px; z-index: 30;
 }
 
 .little-ball-b {
 	width: 4px; height: 4px;
 	background: #f6f6f6;
 	border-radius: 10px;
-	position: absolute; top: calc(37% + 100px); left: 37%; z-index: 30;
+	position: absolute; top: calc(34% + 100px); left: 34%; z-index: 30;
 }
 
 .little-ball-c {
 	width: 4px; height: 4px;
 	background: #f6f6f6;
 	border-radius: 10px;
-	position: absolute; top: calc(37% + 100px); right: 37%; z-index: 30;
+	position: absolute; top: calc(34% + 100px); right: 34%; z-index: 30;
 }
 
 
