--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -79,7 +79,7 @@ body { overflow: auto; }
 	.login-form {
 		position: absolute; right: 50px; top: 50px;
 		width: 130px; height: 140px;
-		background: #161d24;
+		background: #171f26;
 		border-radius: 4px;
 		padding: 25px 15px 0 15px;
 		border: 1px solid #2f2c2c;
