--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -15,7 +15,7 @@
 			%a{ href: '/auth/facebook', id: 'sign_in', class: 'blue button' }
 				Inscription rapide
 		- else
-			%img{ src: image_path('/assets/profile-picture-mask.png'), style: "background-image: url(http://graph.facebook.com/#{current_user.uid}/picture?type=normal); background-position: center;" }
+			%img{ src: image_path('/assets/profile-picture-mask.png'), style: "background-image: url(http://graph.facebook.com/#{current_user.uid}/picture?type=small); background-position: center;" }
 			
 			%span.home-username
 				%a{ href: my_profile_path }
