Last website updates

--- a/app/views/movies/watch.html.haml
+++ b/app/views/movies/watch.html.haml
@@ -28,6 +28,7 @@
     - else
         .code
             .code-display
+        .skip-fb Passer cette étape, s'identifier via Facebook
 
 
 .player-wrapper
